--- a/pilots/pretest/1_randomise_pretest_pilot.Rmd
+++ b/pilots/pretest/1_randomise_pretest_pilot.Rmd
@@ -7,7 +7,15 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+# clear workspace
 rm(list = ls())
+
+# check directory
+proj_dir <- getwd()
+proj_dir <- ("C:/Users/stefanie.meliss/OneDrive - Ambition Institute/code/AO_NPQLL") # debug
+cd <- file.path(proj_dir, "pilots", "pretest")
+setwd(cd)
 ```
 
 ```{r, include=FALSE, echo=F}
@@ -157,7 +165,7 @@ for (c in 1:ncol(q_rand)) {
   q_rand[, c] <- gsub("[*]","", q_rand[,c])
 }
 
-write.csv(pretest, "pretest_pilot.csv", row.names = F)
+write.csv(pretest, "pretest_pilot_raw.csv", row.names = F)
 write.csv(q_rand, "pretest_pilot_rand.csv", row.names = F)
 ```
 
