move functions.R file

--- a/pilots/pretest/2_analyse_pretest_pilot.Rmd
+++ b/pilots/pretest/2_analyse_pretest_pilot.Rmd
@@ -45,7 +45,7 @@ quest <- merge(quest, rand, by = c("question", "order"))
 rand <- reshape2::melt(rand, id = c("question", "order"))
 
 # define function for plotting
-source("functions.R")
+source(file.path(proj_dir, "pilots", "functions.R"))
 
 # average duration
 mean(as.numeric(df$`Duration..in.seconds.`))/60
